[gd_scene load_steps=10 format=3 uid="uid://hr03li8ibbxb"]

[ext_resource type="Shader" path="res://shaders/dissolve.gdshader" id="1_5tsd8"]
[ext_resource type="Script" path="res://card.gd" id="1_6vb7n"]
[ext_resource type="Texture2D" uid="uid://bnbpjp3i0pll0" path="res://assets/deck-of-cards/A.1.png" id="2_3t6m7"]
[ext_resource type="Shader" path="res://shaders/card3D.gdshader" id="3_majrh"]
[ext_resource type="Texture2D" uid="uid://ciofk7xc88lnc" path="res://assets/deck-of-cards/Back1.png" id="5_ufv2y"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_7hv56"]
frequency = 0.0063

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_n83ih"]
noise = SubResource("FastNoiseLite_7hv56")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xxvwl"]
resource_local_to_scene = true
shader = ExtResource("1_5tsd8")
shader_parameter/dissolve_value = 1.0
shader_parameter/burn_size = 0.05
shader_parameter/burn_color = Color(0.784314, 0.352941, 0.156863, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_n83ih")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qqwa3"]
resource_local_to_scene = true
shader = ExtResource("3_majrh")
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 8.55e-06
shader_parameter/inset = 0.0

[node name="Card" type="Button"]
texture_filter = 1
material = SubResource("ShaderMaterial_xxvwl")
offset_right = 68.0
offset_bottom = 100.0
pivot_offset = Vector2(34, 50)
focus_mode = 0
mouse_filter = 1
flat = true
script = ExtResource("1_6vb7n")
card_texture = ExtResource("2_3t6m7")
angle_x_max = 8.0
angle_y_max = 8.0
hover_scale = 1.3

[node name="ShadowTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.0784314, 0.0784314, 0.0784314, 0.627451)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.345
offset_top = -40.79
offset_right = 42.655
offset_bottom = 59.21
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3t6m7")

[node name="CardTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = 1
material = SubResource("ShaderMaterial_qqwa3")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -50.0
offset_right = 34.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture = ExtResource("2_3t6m7")

[node name="BackTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
material = SubResource("ShaderMaterial_qqwa3")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -50.0
offset_right = 34.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture = ExtResource("5_ufv2y")

[connection signal="gui_input" from="CardTexture" to="." method="_on_card_texture_gui_input"]
[connection signal="mouse_entered" from="CardTexture" to="." method="_on_card_texture_mouse_entered"]
[connection signal="mouse_exited" from="CardTexture" to="." method="_on_card_texture_mouse_exited"]
[connection signal="gui_input" from="BackTexture" to="." method="_on_card_texture_gui_input"]
[connection signal="mouse_entered" from="BackTexture" to="." method="_on_card_texture_mouse_entered"]
[connection signal="mouse_exited" from="BackTexture" to="." method="_on_card_texture_mouse_exited"]
